# LinkKit

./: .appveyor.yml  .gitignore  .gitmodules  .jenkins.yml  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE.md  README.md  Test Cases.md  makefile
.github/workflows/: ci.yml
LinkKit/: ABLLink.h  ABLLink.mm  ABLLinkSettingsViewController.h  ABLLinkSettingsViewController.mm  ABLLinkUtils.h
LinkKit/LinkKitResources.bundle/de.lproj/: Localizable.strings
LinkKit/LinkKitResources.bundle/en.lproj/: Localizable.strings
LinkKit/LinkKitResources.bundle/es.lproj/: Localizable.strings
LinkKit/LinkKitResources.bundle/fr.lproj/: Localizable.strings
LinkKit/LinkKitResources.bundle/it.lproj/: Localizable.strings
LinkKit/LinkKitResources.bundle/ja.lproj/: Localizable.strings
LinkKit/LinkKitResources.bundle/ru.lproj/: Localizable.strings
LinkKit/LinkKitResources.bundle/zh.lproj/: Localizable.strings
LinkKit/detail/: ABLLinkAggregate.h  ABLNotificationView.h  ABLNotificationView.mm  ABLObjCUtils.h  ABLSettingsViewController.h  ABLSettingsViewController.mm  BufferConversion.hpp  LocalizableString.h  LocalizableString.mm  tst_BufferConversion.cpp
docs/: ABLSync.html
examples/LinkHut/LinkHut/: AppDelegate.h  AppDelegate.m  AudioEngine.h  AudioEngine.m  AudioEngineController.swift  ContentView.swift  Info.plist  LinkHut-Bridging-Header.h  LinkHut.entitlements  LinkHutApp.swift  QuantumView.h  QuantumView.m  ViewController.h  ViewController.m  main.m
examples/LinkHut/LinkHut.xcodeproj/: project.pbxproj
examples/LinkHut/LinkHut/Assets.xcassets/Plus.imageset/: Contents.json
examples/LinkHut/LinkHut/Base.lproj/: LaunchScreen.xib  Main.storyboard
examples/LinkHut/LinkHut/Images.xcassets/AppIcon.appiconset/: Contents.json
examples/LinkHut/LinkHut/Images.xcassets/Minus.imageset/: Contents.json
examples/LinkHut/LinkHut/Images.xcassets/Settings.imageset/: Contents.json
examples/LinkHut/LinkHut/Images.xcassets/Transport_Play.imageset/: Contents.json
examples/SyncHut/SyncHut/: AppDelegate.h  AppDelegate.m  AudioEngine.h  AudioEngine.m  Info.plist  ViewController.h  ViewController.m  main.m
examples/SyncHut/SyncHut.xcodeproj/: project.pbxproj
examples/SyncHut/SyncHut/Base.lproj/: Main.storyboard
include/: ABLLink.h  ABLLinkSettingsViewController.h  ABLLinkUtils.h  ABLSync.h  ABLSyncSettingsViewController.h  ABLSyncUtils.h
